--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".presentation.MainActivity">
 
     <ImageView
         android:id="@+id/img_header"
@@ -16,7 +16,7 @@
         app:srcCompat="@drawable/ic_paint_vector" />
 
     <FrameLayout
-        android:id="@+id/gallery_container"
+        android:id="@+id/advice_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
