--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:id="@+id/img_header"
         android:layout_width="wrap_content"
+        android:contentDescription="@string/no_image"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:layout_constraintStart_toStartOf="parent"
